file(GLOB modular_ps_core_source *.cxx preprocessor/generated/*.cpp)
ADD_LIBRARY(modular_parsing_core SHARED ${modular_ps_core_source} SignalMatrix.hxx PayloadSegment.cxx PayloadSegment.hxx)
target_include_directories(modular_parsing_core PRIVATE preprocessor)
install(TARGETS modular_parsing_core DESTINATION ${INSTALL_LIBRARY_DIR})
add_subdirectory(test)